...
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dividerColor"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rounds"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="LinearLayoutManager"/>

                <Button
                    android:id="@+id/addButton"
                    style="@style/propertyAddButton"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:text="@string/add"/>

            </LinearLayout>
...
